--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClass = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=FALSE&serverTimezone=Asia/Shanghai
+jdbc.url = jdbc:mysql://localhost:3306/ssmb?useUnicode=true&characterEncoding=utf8&useSSL=FALSE&serverTimezone=Asia/Shanghai
 jdbc.user = melon
 jdbc.password = dwj123##
 
